crates/rulesteward-fapolicyd/tests/snapshots/E03__macro-defined-after-ref.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[E03] sev=Error line=1 col=1 span=0..24 :: undefined macro reference `%langs`
